--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,10 @@ dev_dependencies:
     sdk: flutter
   test: ^1.17.12
 
+  font_awesome_flutter:
+    git:
+      url: https://github.com/loksoon/font
+
 flutter:
   assets:
     - assets/flags/
